@@ -1,5 +1,8 @@
 2006-09-30  Miguel Sofer  <msofer@users.sf.net>
 
+	* generic/tclUtil.c (Tcl_SplitList): optimisation, [Patch 1344747]
+	by dgp.
+
 	* generic/tclInt.decls:
 	* generic/tclInt.h:
 	* generic/tclIntDecls.h:
